Maximize on trying to open 2nd instance, added Traditional Chinese, Czesh and Thai, minor changes to other languages, implemented a basic pipe switching setting

--- a/CustomRPC/About.cs.resx
+++ b/CustomRPC/About.cs.resx
@@ -117,48 +117,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="error" xml:space="preserve">
-    <value>Lỗi</value>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="labelMadeBy.Size" type="System.Drawing.Size, System.Drawing">
+    <value>170, 19</value>
   </data>
-  <data name="errorNoID" xml:space="preserve">
-    <value>Không có ID được chỉ định!</value>
+  <data name="labelMadeBy.Text" xml:space="preserve">
+    <value>Vytvořil: maximmax42</value>
   </data>
-  <data name="errorUpdateFailed" xml:space="preserve">
-    <value>Đã xảy ra lỗi khi tải xuống hoặc cài đặt bản cập nhật.
-Nhấn "Có" để thử lại hoặc "Không" để tải xuống theo cách thủ công.</value>
+  <data name="buttonClose.Text" xml:space="preserve">
+    <value>Zavřít</value>
   </data>
-  <data name="firstTimeRun" xml:space="preserve">
-    <value>Lần chạy đầu tiên</value>
-  </data>
-  <data name="firstTimeRunText" xml:space="preserve">
-    <value>Bạn muốn mở phần Hướng dẫn không?
-Bạn có thể mở nó bất cứ lúc nào bằng cách mở phần Trợ giúp -&gt; Hướng dẫn hoặc ấn F1.</value>
-  </data>
-  <data name="information" xml:space="preserve">
-    <value>Thông tin</value>
-  </data>
-  <data name="statusConnected" xml:space="preserve">
-    <value>Đã kết nối</value>
-  </data>
-  <data name="statusConnecting" xml:space="preserve">
-    <value>Đang kết nối...</value>
-  </data>
-  <data name="statusConnectionFailed" xml:space="preserve">
-    <value>Kết nối thất bại (Bạn đã khởi động Discord chưa?)</value>
-  </data>
-  <data name="statusDisconnected" xml:space="preserve">
-    <value>Đã ngắt kết nối</value>
-  </data>
-  <data name="statusError" xml:space="preserve">
-    <value>Lỗi kết nối (ID sai?)</value>
-  </data>
-  <data name="errorInvalidURL" xml:space="preserve">
-    <value>URL được chỉ định cho (các) nút không hợp lệ!</value>
-  </data>
-  <data name="errorNoInternet" xml:space="preserve">
-    <value>Không thể kết nối internet!</value>
-  </data>
-  <data name="noUpdatesFound" xml:space="preserve">
-    <value>Không tìm thấy bản cập nhật nào!</value>
+  <data name="$this.Text" xml:space="preserve">
+    <value>Podobnosti</value>
   </data>
 </root>
